2007-10-10 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/basetypes.h
	(openvrml::image): Since unsigned long is quite probably larger
	than 4 bytes on 64-bit platforms, use openvrml::int32 in pixel
	accessor and mutator functions.
	* src/libopenvrml/openvrml/basetypes.cpp: Doc-comment updates.

2007-10-10 Braden McDaniel  <braden@endoframe.com>

	* tests/node_interface_set.cpp
	(find_exposedfield_matching_eventin): We want to test
	openvrml::find_interface here, not
	openvrml::node_interface_set::find.

2007-10-10 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/private.h: Added overload of std::operator<< to
	make BOOST_SPIRIT_DEBUG happy.

2007-10-10 Braden McDaniel  <braden@endoframe.com>

	Let libtool handle the dependency relationship between
	libopenvrml-gl and libopenvrml so clients can just refer to the
	former.

	* examples/Makefile.am (LDADD): Removed reference to
	libopenvrml.la.
	* src/Makefile.am
	(libopenvrml_gl_libopenvrml_gl_la_LIBADD): Depend on
	libopenvrml.la.
	(openvrml_xembed_openvrml_xembed_LDADD): Remove reference to
	libopenvrml.la.

2007-10-07 Braden McDaniel  <braden@endoframe.com>

	* examples/Makefile.am (AM_LDFLAGS): On Mac OS X, it seems we
	can't always rely on the dependency to be propagated via
	libopenvrml-gl.la; add GLU_LIBS here.

2007-10-07 Braden McDaniel  <braden@endoframe.com>

	* lib/gtkglext/configure.in: Add X_CFLAGS to CFLAGS before
	checking for GLX types.

2007-10-06 Braden McDaniel  <braden@endoframe.com>

	Made the build less recursive.

	* configure.ac: Removed references to obsolete makefiles.
	* lib/Makefile.am: Moved libantlr build rules here.
	* lib/antlr/GNUmakefile.am: Removed file.
	* src/Makefile.am: Moved build rules for libopenvrml,
	libopenvrml-gl, openvrml-xembed, and openvrml-player here.
	* src/libopenvrml/Makefile.am: Removed file.
	* src/libopenvrml-gl/Makefile.am: Removed file.
	* src/openvrml-player/Makefile.am: Removed file.